--- a/source/icsm/panes/panes.html
+++ b/source/icsm/panes/panes.html
@@ -5,7 +5,7 @@
       <icsm-layerswitch></icsm-layerswitch>
    </div>
    <div class="base-layer-controller">
-      <div geo-draw data="data.map.drawOptions" line-event="elevation.plot.data" rectangle-event="bounds.drawn"></div>
+      <div geo-draw data="data.map.drawOptions" line-event="elevation.plot.data" rectangle-event="bounds.drawn" polygon-event="polygon.drawn"></div>
    </div>
    <restrict-pan bounds="data.map.position.bounds"></restrict-pan>
 </div>
