Tweak the help to better match the drawing capabilities

--- a/source/icsm/clip/infobbox.html
+++ b/source/icsm/clip/infobbox.html
@@ -1,18 +1,16 @@
 <div class="">
 	<strong style="font-size:120%">Select an area of interest.</strong>
-   By hitting the "Draw..." button an area on the map can be selected with the mouse by clicking a
-   corner and while holding the left mouse button
-	down drag diagonally across the map to the opposite corner.
+   By hitting one of the "Draw" buttons an area on the map can be selected with the mouse by drawing a bounding box, drawing a polygon or manually typing in the minimum and maximum of latitude and longitude. Hover over the buttons to see
+	more information.
 	<br/>
-   Clicking the "Draw..." button again allows replacing a previous area selection. <br/>
-   Alternatively you can type in the minimum and maximum coordinates and search by using the "Manual entry" button.<br/>
-	<strong>Notes:</strong>
+   Clicking one of the "Draw" buttons again allows replacing a previous area selection. <br/>
+   <strong>Notes:</strong>
    <ul>
       <li>The data does not cover all of Australia.</li>
       <li>Restrict a search area to below 1.5 degrees square. eg 2x0.75 or 1x1.5</li>
    </ul>
 	<p style="padding-top:5px"><strong>Hint:</strong> If the map has focus, you can use the arrow keys to pan the map.
 		You can zoom in and out using the mouse wheel or the "+" and "-" map control on the top left of the map. If you
-		don't like the position of your drawn area, hit the "Draw" button and draw a new bounding box.
+		don't like the position of your drawn area, hit the one of the "Draw" buttons to draw a new search area.
 	</p>
 </div>
