--- a/source/icsm/help/help.html
+++ b/source/icsm/help/help.html
@@ -8,10 +8,10 @@
 		<li>Define area of interest</li>
 		<li>Select datasets</li>
 		<li>Confirm selections</li>
-		<li>Enter email address</li>
+		<li>Enter email address and industry</li>
 		<li>Start extract</li>
 	</ol>
-	An email will be sent to you on completion of the data extract with a link to your data.
+	One or more emails will be sent to you on completion of the data extract(s) with a link to your data.
    <hr>
 	<icsm-faqs faqs="help.faqs" ></icsm-faqs>
 </div>
