--- a/source/icsm/preview/preview.html
+++ b/source/icsm/preview/preview.html
@@ -6,10 +6,5 @@
          <button type="button" class="btn btn-primary" ng-click="clear()" autofocus>Hide</button>
       </div>
    </div>
-
-   <img class="preview-image" ng-src="{{previewData.url}}"></img>
-   <div style="position:absolute; top:10px; left:10px;color:white">
-      <strong>File name:</strong>
-      {{previewData.item.file_name}}
-   </div>
+   <img width="800" class="preview-image" ng-src="{{previewData.url}}"></img>
 </div>
