--- a/source/common/navigation/altthemes.html
+++ b/source/common/navigation/altthemes.html
@@ -1,5 +1,5 @@
 <span class="altthemes-container">
-	<span ng-repeat="item in themes | altthemesMatchCurrent : current">
+	<span ng-repeat="item in themes | altthemesEnabled">
        <a title="{{item.label}}" ng-href="{{item.url}}" class="altthemesItemCompact" target="_blank">
          <span class="altthemes-icon" ng-class="item.className"></span>
        </a>
