Make the toolbar a bit smaller on small page width

--- a/source/common/side-panel/trigger.html
+++ b/source/common/side-panel/trigger.html
@@ -1,5 +1,5 @@
 <button ng-click="toggle()" type="button" class="map-tool-toggle-btn">
-   <span class="hidden-sm">{{name}}</span>
+   <span class="panel-sm">{{name}}</span>
    <ng-transclude></ng-transclude>
    <i class="fa fa-lg" ng-class="iconClass"></i>
 </button>
