--- a/source/common/reset/reset.html
+++ b/source/common/reset/reset.html
@@ -1,4 +1,4 @@
 <button type="button" class="map-tool-toggle-btn" ng-click="reset()" title="Reset page">
-   <span class="hidden-sm">Reset</span>
+   <span class="panel-sm">Reset</span>
    <i class="fa fa-lg fa-refresh"></i>
 </button>
