Add contributors to default header

--- a/source/common/header/header.html
+++ b/source/common/header/header.html
@@ -33,7 +33,9 @@
    </div>
    <!--/.nav-collapse -->
 </div>
-
+<div class="contributorsLink" style="position: absolute; right:7px; bottom:15px">
+   <icsm-contributors-link></icsm-contributors-link>
+</div>
 <!-- Strap -->
 <div class="row">
    <div class="col-md-12">
