Update google analytics call.

--- a/source/icsm/toolbar/toolbar.html
+++ b/source/icsm/toolbar/toolbar.html
@@ -8,7 +8,7 @@
                      <input type="text" ng-autocomplete ng-model="values.from.description" options='{country:"au"}'
                         size="32" title="Select a locality to pan the map to." class="form-control" aria-label="...">
                      <div class="input-group-btn">
-                        <button ng-click="zoom(false)" exp-ga="['send', 'event', 'icsm', 'click', 'zoom to location']"
+                        <button ng-click="zoom(false)"
                            class="btn btn-default" title="Pan and potentially zoom to location.">
                            <i class="fa fa-search"></i>
                         </button>
