Remove show on hover on contributors link

--- a/source/icsm/contributors/contributors.html
+++ b/source/icsm/contributors/contributors.html
@@ -1,4 +1,4 @@
-<span class="contributors" ng-mouseenter="over()" ng-mouseleave="out()"
+<span class="contributors" 
       ng-class="(contributors.show || contributors.ingroup || contributors.stick) ? 'transitioned-down' : 'transitioned-up'">
    <button class="undecorated contributors-unstick" ng-click="unstick()" style="float:right">X</button>
    <div ng-repeat="contributor in contributors.orgs | activeContributors" style="text-align:center">
