--- a/source/icsm/contributors/show.html
+++ b/source/icsm/contributors/show.html
@@ -1,2 +1,2 @@
-<a ng-mouseenter="over()" ng-mouseleave="out()" class="contributors-link" title="Click to lock/unlock contributors list."
+<a class="contributors-link" title="Click to lock/unlock contributors list."
       ng-click="toggleStick()" href="#contributors0">Contributors</a>
