--- a/source/common/featureinf/featureinf.html
+++ b/source/common/featureinf/featureinf.html
@@ -1,14 +1,14 @@
 <div class="fi-d1" drag-parent parentclass="featureInfContainer" ng-class="d1Height">
+    <button class="undecorated fi-close" ng-click="close()">X</button>
     <div class="fi-d2">
       <div class="fi-d3">
         <div class="fi-d3-1">
             <strong style="font-size: 120%;padding:2px;">Features</strong>
-          <button class="undecorated fi-close" ng-click="close()">X</button>
         </div>
         <div class="fi-d3-2">
           <div class="fi-d4">
             <div class="fi-d5">
-                <div style="padding:5px;" ng-repeat="feature in features">
+                <div style="padding:5px;" ng-repeat="feature in features" ng-mouseenter="entered(feature)" ng-mouseleave="left()">
                     <div ng-if="feature.properties.maptitle" style="white-space: nowrap;">
                         <strong>Map Title:</strong>
                         <span title='{{feature.properties.mapnumber ? "Map number: " + feature.properties.mapnumber : ""}}'>
